--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -337,3 +337,12 @@ span {
   opacity: 0.5;
   margin-left: 0;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+button a {
+  color: white;
+}
